--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     	<div class="wrapper">
 		<header>
 			<h1><a href=# target="_blank">SDXPROJ-AS-AP</a></h1>
-			<a href=# target="_blank"><img src="./misc/AS9267.png" width=60%></a>
+			<a href=# target="_blank"><img src="./misc/as9267.png" width=60%></a>
 			<p>
 				<small>Hosted on GitHub Pages: Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
 			</p>
