--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 			</ul>
 			<h2 id="acknowledgments">Acknowledgments</h2>
 			<ul>
-				<li><a href="http://www.myren.net.my/">Malaysian Research & Education Network</a></li>
-				<li><a href="https://www.twaren.net/english/">TWAREN</a></li>
-				<li><a href="https://bgp.he.net/" target="_blank">Hurricane Electric</a></li>
+				<li><a href="http://www.myren.net.my/">Malaysian Research & Education Network/NOC</a></li>
+				<li><a href="https://www.twaren.net/english/">TWAREN/NCHC-TN</a></li>
+				<li><a href="https://bgp.he.net/" target="_blank">Hurricane Electric/FMT2</a></li>
 			</ul>
 			<h2 id="remark-links">Remark Links</h2>
 			<ul>
