--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<ul>
 				<li>Locations:</li>
 					<ul>
-						<li>Malaysia (Selangor) - <a href="http://www.myren.net.my/" target="_blank">MYREN</a></li>
-						<li>Taiwan (Tainan) - <a href="https://www.twaren.net/english/" target="_blank">TWAREN</a></li>
+						<li>Malaysia (Selangor) - <a href="http://www.myren.net.my/" target="_blank">MYREN/NOC</a></li>
+						<li>Taiwan (Tainan) - <a href="https://www.twaren.net/english/" target="_blank">TWAREN/NCHC-TN</a></li>
 						<li>United States (Fremont) - <a href="https://he.net/tour/fremont2.html" target="_blank">HE/FMT2</a></li>
 					</ul>
 			</ul>
